--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="nav">
     <div>
       <div class="brand">CREDIT <span style="color:#fff">PLUS</span></div>
-      <div class="tag">Fast • Trusted • Local (Thane)</div>
+      <div class="tag">Fast • Trusted • Local (Thane Division)</div>
     </div>
     <nav class="links">
       <a class="active" href="#">Delivery List</a>
@@ -282,7 +282,7 @@
     </form>
 
     <div style="margin-top:14px;font-size:0.95rem;color:var(--muted)">
-      <div><strong>Office Address:</strong> Credit Plus Couriers — Thane Hub, Ovale Road, Thane, Maharashtra</div>
+      <div><strong>Office Address:</strong> Credit Plus Couriers — Pune,Maharashtra</div>
       <div style="margin-top:6px"><strong>Support Email:</strong> <a href="mailto:support@creditsiason.com">support@creditsiason.com</a></div>
     </div>
   </div>
