--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
         <div style="text-align:right">
           <div class="small">Issuer</div>
-          <div style="font-weight:800;margin-top:6px" id="issuer">Credit Saison</div>
+          <div style="font-weight:800;margin-top:6px" id="issuer">Credit Siason</div>
         </div>
       </div>
     </div>
