--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ document.addEventListener('DOMContentLoaded', function(){
   document.getElementById('driver').textContent = 'NS Bardi';
   document.getElementById('bike').textContent = 'MH 04 FX7383';
   document.getElementById('driverPhone').innerHTML = '<a href="tel:9082011949">9082011949</a>';
-  document.getElementById('issuer').textContent = 'Credit Saison';
+  document.getElementById('issuer').textContent = 'Credit Siason';
 
   // AWB quick-check action: if correct AWB entered, scroll to visible and focus block
   document.getElementById('showBtn').addEventListener('click', function(){
