--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ function buildRoster(){
     left.appendChild(awbDiv); left.appendChild(textDiv);
 
     const right = document.createElement('div');
-    right.innerHTML = '<div class="small">Issuer</div><div style="font-weight:800;margin-top:6px">' + (idx===29 ? 'Credit Saison' : randomIssuer(i)) + '</div>';
+    right.innerHTML = '<div class="small">Issuer</div><div style="font-weight:800;margin-top:6px">' + (idx===29 ? 'Credit Siason' : randomIssuer(i)) + '</div>';
 
     wrap.appendChild(left); wrap.appendChild(right);
     el.appendChild(wrap);
